0.9.82
======

 - Manage group settings
 - See who the group hosts are

0.9.81
======

 - Equip items

0.9.80
======

 - View and edit your scripts

0.9.79
======

 - Script widgets

0.9.78
======

 - Drop items on the map

0.9.77
======

 - Improved map experience
 - See people's subscriber and stories count

0.9.76
======

 - Subscribe to people to get new story notifications
 - Group calls
 - See trade members

0.9.75
======

 - Create and mint your own items
 - Trade items with other people
 - See your inventory

0.9.74
======

 - Improved support for reminders

0.9.73
======

 - Improved page toolbar
 - Generate photos in messages
 - Take photos with your camera
 - Set group photo
 - Set group background

0.9.72
======

 - See groups on profiles
 - Add rich content to your profile

0.9.71
======

 - See groups you have in common with a friend
 - Set pay rate

0.9.70
======

 - See active friends
 - Add group pages
 - Set group category

0.9.69
======

 - Add widgets to page content

0.9.68
======

 - Add additional content to pages

0.9.67
======

 - Mention open groups in stories

0.9.66
======

 - Snooze group notifications
 - Pages are now created after entering the details
 - It is now possible to swipe between screens

0.9.65
======

 - Fixed crash saving images to device
 - Fixed bug where pages would load forever
 - Added caching on main screens

0.9.64
======

 - Improved map integration

0.9.62
======

 - Discover local groups, pages, and stories
 - Open or close your group to the public
 - Request to join groups
 - View and accept group join request
 - View your reminders created on web (more in-app features to come)

0.9.59
======

 - Generate card photos
 - Send video messages

 0.9.58
======

 - Save photos to device
 - Zoom in on photo
 - Recently active groups now show at the top

0.9.57
======

 - Connect account to web browser

0.9.56
======

 - Card layout updates
 - Ability to hide message button on cards