@@ -1,9 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<module version="4">
-  <component name="ModuleClassLoaderOverlays">
-    <paths>
-      <option value="/tmp/overlay16089055779935992234" />
-      <option value="/tmp/overlay16089055779935992234" />
-    </paths>
-  </component>
-</module>
