@@ -2,7 +2,9 @@
 ======
 
  - Manage group settings
- - See who the group hosts are
+ - See who hosts the group
+ - Link previews in messages
+ - Edit messages
 
 0.9.81
 ======
